--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Build App
         run: |
           cd sirula && \
-          docker run -v $PWD:/app -w /app rust:1:50 /bin/sh -c 'cargo build --release'
+          docker run -v $(pwd):/app -w /app rust:1:50 /bin/sh -c 'cargo build --release'
