--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,15 @@ jobs:
       - name: Build App
         run: |
           cd sirula && \
+          apt install -y libpango1.0-dev && \
           cargo build --verbose
+      
+      - name: Release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: sirula/target/release/sirula
+          asset_name: sirula
+          tag: ${{ github.ref }}
+          overwrite: true
+          body: "CI Release"
