--- a/.github/workflows/grab.yml
+++ b/.github/workflows/grab.yml
@@ -26,4 +26,5 @@ jobs:
           git config --global user.name 'Update Bot'
           git config --global user.email 'boot@example.com'
           git commit -am "New Version Detected"
+          git tag v.$hash --message "v.$hash"
           git push --atomic origin main refs/tags/v.$hash
