--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{secrets.PAT}}
+          repo_token: ${{secrets.PAT}}
 
       - name: Checkout upstream repo
         run: |
@@ -34,7 +34,7 @@ jobs:
       - name: Release
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.PAT }}
           file: sirula/target/release/sirula
           asset_name: sirula
           tag: ${{ github.ref }}
